--- a/alexandria/alexandria_site/static/css/stylesheet.css
+++ b/alexandria/alexandria_site/static/css/stylesheet.css
@@ -84,7 +84,6 @@ body{
   margin: 0;
   min-height: 100%;
   min-width: 100%;
-  overflow-x: hidden;
 }
 
 hr {
@@ -144,10 +143,11 @@ hr {
 .footer{
   position:relative;
   margin-top: 2em;
+  margin-inline: 0;
   background-color: var(--medium);
   box-shadow: 0px -2px 30px var(--shadow);
   border-bottom: 3px solid var(--dark);
-  width: 100vw;
+  width: 100%;
   height: 80px;
   bottom: 0;
   left: 0;
@@ -524,6 +524,24 @@ hr {
   min-width: 100vw;
 }
 
+.filter-wrapper{
+  display: flex;
+  flex-direction: column;
+  background-color: var(--sub-accordion);
+  padding: 1rem;
+
+  color: var(--lighter);
+  font-family: roboto;
+  font-weight: 200;
+  text-align: center;
+}
+
+.filter{
+  margin: .3rem;
+  background-color: var(--sub-accordion);
+
+  
+}
 
 .hidden{
   display: none;
