--- a/alexandria/alexandria_site/static/css/stylesheet.css
+++ b/alexandria/alexandria_site/static/css/stylesheet.css
@@ -123,6 +123,8 @@ hr {
   --dark: #082239;
 
   --fontSize: 80rem;
+
+  --accordion-width: min(50vw, 30rem);
 }
 
 .page-bg{
@@ -298,8 +300,10 @@ hr {
 .content-section{
   width: 100%;
   min-height: auto;
+  margin-inline: 0;
   margin-top: 2%;
   overflow: hidden;
+
 }
 
 .title{
@@ -414,22 +418,19 @@ hr {
 /* <- PROJECTS PAGE -> */
 
 .accordion-wrapper{
-  width: 40rem;
+  width: var(--accordion-width);
   min-height: 4.5rem;
   background-color: var(--accordion-nav);
   border-top: .5rem solid var(--accordion);
   border-bottom: .2vw solid var(--accordion);
-  margin: 0;
-  margin-right: 0; 
   overflow: hidden;
-
   transition: 250ms;
 
   position: relative;
 }
 
 .accordion-wrapper.nav-active{
-  width: 100rem;
+  width: 100%;
 }
 
 
@@ -442,7 +443,7 @@ hr {
 .menu {
   position: relative;
   background-color: var(--lighter);
-  max-width: 40rem;
+  max-width: var(--accordion-width);
   min-height: 4.5rem;
   z-index: 300;
 }
@@ -450,7 +451,7 @@ hr {
 
 .accordion{
   position: relative;
-  width: 40rem;
+  width: 100%;
   height: 4.5rem;
   background-color: var(--accordion);
   border: none;
@@ -507,13 +508,13 @@ hr {
 
 .accordion-nav{
   max-height: 100%;
-  max-width: 50rem;
-  float: right;
+  max-width: calc(98% - var(--accordion-width));
   position: absolute;
-  right: calc(50% - 45rem);
+  right: 1%;
   overflow: hidden;
+  overflow-y: auto;
 
-
+  text-align: center;
 
   z-index: 1;
 }
