--- a/alexandria/alexandria_site/templates/alexandria_site/projects.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/projects.html
@@ -9,8 +9,9 @@
 
     <hr>
 
-    <div class="content-section" style="display: flex;justify-content: left; margin: 0 auto; width: 100rem;">
-
+    <div class="content-section">
+        
+        <div style="display: flex; justify-content: start; width: min(calc(100% - 10rem), 100rem); margin: 0 auto;">
         <div class="accordion-wrapper" id="accordionWrapper"> 
 
             <div class="accordion-nav">
@@ -64,7 +65,7 @@
                                         {{project.about | linebreaks | truncatewords:120}}
                                     </div>
                                 <hr>
-                                <a href="{%url 'project' project.slug%}"> <button class="link-button" style="width: 93%; border-radius: 0.5vw;"> Leia Mais </button></a>
+                                <a href="{%url 'project' project.slug%}"> <button class="link-button" style="width: 93%; border-radius: 0.5vw; margin: 0;"> Leia Mais </button></a>
                             </div>
                         </div>
                         {% endfor %}
@@ -74,7 +75,7 @@
                 {% elif filter == 'estado' %}
 
                     {% for estado in estados %}
-                    <button style="font-weight: 200;" class="accordion" onclick="accordionToggleDown(this)">{{estado.0}} | {{objective.project_set.all.count}}</button>
+                    <button style="font-weight: 200;" class="accordion" onclick="accordionToggleDown(this)">{{estado.0}} | {{estado.1.count}}</button>
                     <div class="panel down">
                         {% for project in objective.project_set.all %}
                         <div>
@@ -88,7 +89,7 @@
                                         {{project.about | linebreaks | truncatewords:120}}
                                     </div>
                                 <hr>
-                                <a href="{%url 'project' project.slug%}"> <button class="link-button" style="width: 93%; border-radius: 0.5vw;"> Leia Mais </button></a>
+                                <a href="{%url 'project' project.slug%}"> <button class="link-button" style="width: 90%; border-radius: 0.5vw;"> Leia Mais </button></a>
                             </div>
                         </div>
                         {% endfor %}
@@ -108,7 +109,7 @@
         {% comment %} <div id="accordionNav" class="panel right">
             <div class="accordion-nav-content">a</div>
         </div> {% endcomment %}
-
+        </div>
 
     </div>
 
