Flushed and remade db and added command 'populate_ods' to add all default objectives

--- a/alexandria/alexandria_site/templates/alexandria_site/project_page.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/project_page.html
@@ -36,8 +36,8 @@
                 <div style="display: flex; flex-wrap: wrap; justify-content: space-around; gap: 2vw;">
                     {% for partner in partners %}
                         <div style="text-align: center">
-                            <img src="a" width="100vw;"/><br>
-                            <sub style="font-size: 2rem;">
+                            <img src="{{partner.logo.url}}" width="100vw;" style="outline: .1rem solid black; outline-offset: .5rem;"><br>
+                            <sub style="font-size: 2rem; font-weight: 500;">
                                 {{partner.name}}
                             </sub>
                         </div>
