--- a/alexandria/alexandria_site/templates/alexandria_site/projects.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/projects.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="content">
     <div class="content-section center" style="min-width:90vw; font-size: 1.7rem;">
-        <h1 class="title center">Objetivos de Desenvolvimento Sustentável</h1>
-    <p>Aqui ficam os projetos executados por meio do programa SOMAR, categorizados todos no Objetivo de Desenvolvimento Social para que o projeto contribui.</p><br>
+        <h1 class="title center" style="font-size: 4rem;">Projetos</h1>
+    <p>Aqui ficam os projetos executados por meio do programa SOMAR, categorizados cada um de acordo com o filtro aplicado.</p><br>
     </div>
 
     <hr>
