--- a/alexandria/alexandria_site/templates/alexandria_site/project_page.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/project_page.html
@@ -22,12 +22,22 @@
     <div class="project-images">
         {% for image in images %}
             {% if image %}
-                <button class="project-image closed-image" onload="makeFocusable(this)" onfocus=" openImgToggle(this)" onfocusout="openImgToggle(this)"><img src="{{image.url}}"></button>
+                <button class="project-image closed-image" onload="makeFocusable(this)" onfocus=" openImgToggle(this)" onfocusout="openImgToggle(this)"><img src="{{image}}"></button>
             {% endif %}
         {% endfor %}
     </div>
     <hr>
     {%endif%}
+
+    {% if video %}
+        <div class="video-wrapper">
+            <video width="640" height="480" controls class="video">
+                <source src="{{video}}" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+        </div>
+    <hr>
+    {% endif %}
 
     <p style="text-align: center; font-weight: 500;">Parceiros:</p><br><br>
     <div class="project-info">
