--- a/alexandria/alexandria_site/static/css/stylesheet.css
+++ b/alexandria/alexandria_site/static/css/stylesheet.css
@@ -76,6 +76,10 @@ time, mark, audio, video {
   font-style: italic;
 }
 
+html{
+  height: fit-content;
+}
+
 
 body{
   display: flex;
@@ -84,6 +88,7 @@ body{
   margin: 0;
   min-height: 100%;
   min-width: 100%;
+
 }
 
 hr {
@@ -151,10 +156,10 @@ hr {
   border-bottom: 3px solid var(--dark);
   width: 100%;
   height: 80px;
-  bottom: 0;
-  left: 0;
+
   margin-bottom: 0;
   z-index: 998;
+  
 }
 
 .home-banner{
