--- a/alexandria/alexandria_site/templates/alexandria_site/about.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/about.html
@@ -1,6 +1,7 @@
 {% extends 'alexandria_site/layout.html' %}
 
 {% block content %}
+<div class="content">
     <div class="content-section" style="overflow: auto;width: 70rem; height: fit-content; margin-inline: auto; margin-block: 5rem;  display: flex; gap: 2rem; justify-content: center;">
         <h1 class="title" style="font-size: 7rem; margin-bottom: 0; margin-top: 5rem; margin-inline: 0;">Sobre Nós</h1>
         <div class="text">
@@ -14,4 +15,5 @@
             </p>
         </div>
     </div>
+</div>
 {% endblock %}
