--- a/alexandria/alexandria_site/templates/alexandria_site/layout.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/layout.html
@@ -34,12 +34,17 @@
   </div>
 
     <div id='shade'>
+      </div>
+        {% block content %}
+        {% endblock %}
+      </div>
     </div>
-    {% block content %}
-    {% endblock %}
 
   <footer class="footer">
-    <div style="border-radius: 5px;background-color: #17fc0350; position:fixed; bottom: .5vw; left: .5vw; width:fit-content; height:fit-content; opacity: 70%;"><p style="padding-inline:.4vw; padding-block:.2vw; font-size: 1vw;"> ALPHA </p></div>
+    <div style="border-radius: 5px;background-color: #17fc0350; position:fixed; bottom: .5vw; left: .5vw; width:fit-content; height:fit-content; opacity: 70%;">
+      <p style="padding-inline:.4vw; padding-block:.2vw; font-size: 1vw;"> ALPHA </p>
+    </div>
   </footer>
+
 </body>
 </html>
