Changes to code

--- a/alexandria/alexandria_site/templates/alexandria_site/admin/changes.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/admin/changes.html
@@ -17,9 +17,9 @@
 
 .colMS h1{
     padding: 1rem;
-    color: white;
+    color: var(--header-link-color);
     border-radius: .2rem;
-    background-color: #79aec8;
+    background-color: var(--primary);
     text-align: left;
     width: 50vw;
     height: fit-content;
