--- a/alexandria/alexandria_site/static/css/stylesheet.css
+++ b/alexandria/alexandria_site/static/css/stylesheet.css
@@ -508,7 +508,7 @@ hr {
   overflow: hidden;
   overflow-y: auto;
 
-  text-align: center;
+  text-align: left;
 
   z-index: 1;
 }
@@ -548,13 +548,14 @@ hr {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content:space-evenly;
   gap: 1vw;
 
-  min-width: 100vw;
-  width: 100vw;
+  min-width: 100%;
+  width: 100%;
   margin: 0 auto;
+
 
 }
 
