--- a/alexandria/alexandria_site/templates/alexandria_site/projects.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/projects.html
@@ -44,7 +44,9 @@
                                         {{project.about | linebreaks | truncatewords:120}}
                                     </div>
                                 <hr>
-                                <a href="{%url 'project' project.slug%}"> <button class="link-button" style="width: 93%; border-radius: 0.5vw; margin: 0;"> Leia Mais </button></a>
+                                <div style="text-align: center;">
+                                    <a href="{%url 'project' project.slug%}"> <button class="link-button" style="width: 93%; border-radius: 0.5vw; margin: 0;;"> Leia Mais </button></a>
+                                </div>
                             </div>
                         </div>
                         {% endfor %}
