--- a/alexandria/alexandria_site/templates/alexandria_site/layout.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/layout.html
@@ -41,8 +41,26 @@
     </div>
 
   <footer class="footer">
+
+    <div class="socials">
+      <a href="#" class="social">
+        <img id="twitter" src="../static/icons/twitter.png">
+      </a>
+      <a href="#" class="social">
+        <img id="twitter" src="../static/icons/facebook.png">
+      </a>
+      <a href="#" class="social">
+        <img id="twitter" src="../static/icons/instagram.png">
+      </a>
+    </div>
+
+
     <div style="border-radius: 5px;background-color: #17fc0350; position:fixed; bottom: .5vw; left: .5vw; width:fit-content; height:fit-content; opacity: 70%;">
       <p style="padding-inline:.4vw; padding-block:.2vw; font-size: 1vw;"> ALPHA </p>
+    </div>
+
+
+        
     </div>
   </footer>
 
