--- a/alexandria/alexandria_site/static/css/stylesheet.css
+++ b/alexandria/alexandria_site/static/css/stylesheet.css
@@ -131,7 +131,7 @@ hr {
 
   --fontSize: 80rem;
 
-  --accordion-width: min(50vw, 30rem);
+  --accordion-width: min(50vw, min(30rem, 30vw));
 }
 
 .page-bg{
@@ -154,6 +154,7 @@ hr {
   margin-top: 2em;
   margin-inline: 0;
   background-color: var(--medium);
+  background: radial-gradient(circle at 50%, var(--medium) 80%, color-mix(in srgb, var(--medium) 80%, #000000));
   box-shadow: 0px -2px 30px var(--shadow);
   border-bottom: 3px solid var(--dark);
   width: 100%;
@@ -429,12 +430,15 @@ hr {
   font-family: 'roboto-thin';
   font-weight: lighter;
   color: white;
-  border: 3px groove var(--shadow);
+  border: 2px groove var(--shadow);
   border-radius: 10px;
+
+  transition: 150ms;
 }
 
 .link-button:hover{
-  background-color: #ef853a;
+  background-color: color-mix(in srgb, var(--button) 80%, rgb(255, 152, 221));
+  border: 4px groove var(--shadow);
   cursor: pointer;
 }
 
@@ -486,7 +490,7 @@ hr {
   z-index: 300;
 
   font-family: roboto;
-  font-size: calc(var(--fontSize) * 0.016);
+  font-size: calc(var(--accordion-width) * 0.036);
   color: white;
 
   transition: 150ms;
@@ -563,13 +567,19 @@ hr {
   font-family: roboto;
   font-weight: 200;
   text-align: center;
+  font-size: calc(var(--accordion-width) * 0.034);
 }
+
 
 .filter{
   margin: .3rem;
   background-color: var(--sub-accordion);
 
   
+}
+
+.filter select{
+  width: 55%;
 }
 
 .hidden{
